✨ Style index.html

--- a/index.html
+++ b/index.html
@@ -3,9 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="refresh" content="0; url=Night%20at%20the%20Church.pdf">
-    <title>Redirecting to PDF</title>
+    <title>Redirecting to PDF</title> 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Pirata+One&display=swap" rel="stylesheet">
+    <style>
+        .pirata-one-regular {
+          font-family: "Pirata One", system-ui;
+          font-weight: 400;
+          font-style: normal;
+        }
+        body {
+            margin: auto;
+            margin-top: 200px;
+            color: white; 
+            background-color: #020538; 
+        }
+    </style>
 </head>
 <body>
-    <p>If you are not redirected automatically, <a href="Night%20at%20the%20Church.pdf">click here</a>.</p>
+    <h1 class="pirata-one-regular">Night at the Church</h1>
+    <p class="pirata-one-regular">If you are not redirected automatically, <a href="Night%20at%20the%20Church.pdf">click here</a>.</p>
 </body>
 </html>
